// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`welcome - navigation using application menu > renders 1`] = `
<div>
  <div
    class="Notifications"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="home-button"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <div
      class="topTabBar"
      role="tablist"
    >
      <div
        class="Tabs tabs scrollable"
      >
        <div
          class="Tab flex gap-2 items-center topTab"
          data-testid="top-tab-for-/"
          id="top-tab-/"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Overview
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-/"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-/"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tab flex gap-2 items-center topTab active"
          data-testid="top-tab-for-/welcome"
          id="top-tab-/welcome"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Welcome
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-/welcome"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-/welcome"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div
        class="flex justify-center Welcome items-center"
        data-testid="welcome-page"
      >
        <div
          data-testid="welcome-banner-container"
          style="width: 320px;"
        >
          <i
            class="logo svg focusable"
            data-testid="no-welcome-banners-icon"
          >
            <span
              class="icon"
            >
              <svg
                viewBox="0 0 400 400"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <path
                  d="M 364 200 A 164 164 0 1 0 36 200 A 164 164 0 1 0 364 200 Z M 324 200 A 124 124 0 1 0 76 200 A 124 124 0 1 0 324 200 Z"
                  fill="#00a7a0"
                  fill-rule="evenodd"
                />
                
  
                <path
                  d="M 100,232 L 150,232 L 150,208 L 100,208 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 161.302,224.036 L 186.302,154.036 L 163.698,145.964 L 138.698,215.964 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 163.722,154.101 L 203.722,264.101 L 226.278,255.899 L 186.278,145.899 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 226.030,264.727 L 256.030,194.727 L 233.970,185.273 L 203.970,255.273 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 235.780,197.684 L 260.780,227.684 L 279.220,212.316 L 254.220,182.316 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 270,232 L 300,232 L 300,208 L 270,208 Z"
                  fill="#00a7a0"
                />
                
  
                <circle
                  cx="100"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="150"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="175"
                  cy="150"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="215"
                  cy="260"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="245"
                  cy="190"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="270"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="300"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                

              </svg>
              

            </span>
          </i>
          <div
            class="flex justify-center"
          >
            <div
              data-testid="welcome-text-container"
              style="width: 320px;"
            >
              <h2>
                Welcome to some-product-name!
              </h2>
              <p>
                To get you started we have auto-detected your clusters in your kubeconfig file and added them to the catalog, your centralized view for managing all your cloud-native resources.
                <br />
                <br />
                If you have any questions or feedback, please join us on our 
                <a
                  class="link"
                  href="https://github.com/freelensapp/freelens/discussions"
                  rel="noreferrer"
                  target="_blank"
                >
                  Github repository
                </a>
                .
              </p>
              <ul
                class="block"
                data-testid="welcome-menu-container"
                style="width: 320px;"
              >
                <li
                  class="flex grid-12"
                >
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                  <a
                    class="col-10"
                  >
                    Browse Clusters in Catalog
                  </a>
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="navigate_next"
                    >
                      navigate_next
                    </span>
                  </i>
                </li>
                <li
                  class="flex grid-12"
                >
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="terminal"
                    >
                      terminal
                    </span>
                  </i>
                  <a
                    class="col-10"
                  >
                    Open a Terminal
                  </a>
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="navigate_next"
                    >
                      navigate_next
                    </span>
                  </i>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="HotbarMenu flex flex-col"
    >
      <div
        class="HotbarItems flex flex-col"
      >
        <div
          class="HotbarCell animateDown"
          index="0"
        >
          <div
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="1"
        >
          <div
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="2"
        />
        <div
          class="HotbarCell animateDown"
          index="3"
        />
        <div
          class="HotbarCell animateDown"
          index="4"
        />
        <div
          class="HotbarCell animateDown"
          index="5"
        />
        <div
          class="HotbarCell animateDown"
          index="6"
        />
        <div
          class="HotbarCell animateDown"
          index="7"
        />
        <div
          class="HotbarCell animateDown"
          index="8"
        />
        <div
          class="HotbarCell animateDown"
          index="9"
        />
        <div
          class="HotbarCell animateDown"
          index="10"
        />
        <div
          class="HotbarCell animateDown"
          index="11"
        />
        <div
          id="DndDescribedBy-0"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-0"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-Default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            class="ClusterSearch"
            data-testid="status-bar-cluster-search"
            id="status-bar-cluster-search"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="search"
              >
                search
              </span>
            </i>
            <span
              class="label"
            >
              Search clusters
            </span>
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;

exports[`welcome - navigation using application menu > when navigated somewhere else > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-/"
            id="top-tab-/"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-/welcome"
            id="top-tab-/welcome"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/welcome"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/welcome"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-/preferences"
            id="top-tab-/preferences"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Preferences
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/preferences"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/preferences"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center active"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="application-page"
                id="application-page"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  Application
                </h2>
                <div
                  data-preference-item-test="theme"
                >
                  <section
                    id="appearance"
                  >
                    <div
                      class="SubTitle"
                    >
                      Theme
                       
                    </div>
                    <div
                      class="Select theme-lens css-b62m3t-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-theme-input-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                        role="log"
                      />
                      <div
                        class="Select__control css-13cymwt-control"
                      >
                        <div
                          class="Select__value-container Select__value-container--has-value css-hlgwow"
                        >
                          <div
                            class="Select__single-value css-1dimb5e-singleValue"
                          >
                            Sync with computer
                          </div>
                          <div
                            class="Select__input-container css-19bb58m"
                            data-value=""
                          >
                            <input
                              aria-activedescendant=""
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="Select__input"
                              id="theme-input"
                              role="combobox"
                              spellcheck="false"
                              style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="Select__indicators css-1wy0on6"
                        >
                          <span
                            class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="HorizontalLine size-xl"
                />
                <div
                  data-preference-item-test="extension-install-registry"
                >
                  <section
                    id="extensionRegistryUrl"
                  >
                    <div
                      class="SubTitle"
                    >
                      Extension Install Registry
                       
                    </div>
                    <div
                      class="Select theme-lens css-b62m3t-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-extension-install-registry-input-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                        role="log"
                      />
                      <div
                        class="Select__control css-13cymwt-control"
                      >
                        <div
                          class="Select__value-container Select__value-container--has-value css-hlgwow"
                        >
                          <div
                            class="Select__single-value css-1dimb5e-singleValue"
                          >
                            Default Url
                          </div>
                          <div
                            class="Select__input-container css-19bb58m"
                            data-value=""
                          >
                            <input
                              aria-activedescendant=""
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="Select__input"
                              id="extension-install-registry-input"
                              role="combobox"
                              spellcheck="false"
                              style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="Select__indicators css-1wy0on6"
                        >
                          <span
                            class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <p
                      class="mt-4 mb-5 leading-relaxed"
                    >
                      This setting is to change the registry URL for installing extensions by name. 
                      If you are unable to access the default registry (https://registry.npmjs.org) you can change it in your 
                      <b>
                        .npmrc
                      </b>
                       file or in the input below.
                    </p>
                    <div
                      class="Input theme round black disabled invalid"
                    >
                      <label
                        class="input-area flex items-center gap-2"
                        id=""
                      >
                        <input
                          class="input grow"
                          disabled=""
                          placeholder="Custom Extension Registry URL..."
                          spellcheck="false"
                          value=""
                        />
                      </label>
                      <div
                        class="input-info flex gap-2"
                      />
                    </div>
                  </section>
                </div>
                <div
                  class="HorizontalLine size-xl"
                />
                <div
                  data-preference-item-test="start-up"
                >
                  <section
                    id="other"
                  >
                    <div
                      class="SubTitle"
                    >
                      Start-up
                       
                    </div>
                    <label
                      class="Switch"
                      data-testid="switch"
                    >
                      Automatically start IMS-Scope on login
                      <input
                        role="switch"
                        type="checkbox"
                      />
                    </label>
                  </section>
                </div>
                <div
                  class="HorizontalLine size-xl"
                />
                <div
                  data-preference-item-test="hotbar-auto-hide"
                >
                  <section
                    id="hotbar"
                  >
                    <div
                      class="SubTitle"
                    >
                      Auto-Hide Hotbar
                       
                    </div>
                    <label
                      class="Switch"
                      data-testid="switch"
                    >
                      Automatically hide Hotbar
                      <input
                        role="switch"
                        type="checkbox"
                      />
                    </label>
                  </section>
                </div>
                <div
                  class="HorizontalLine size-xl"
                />
                <div
                  data-preference-item-test="menu-bar"
                >
                  <section
                    id="menu"
                  >
                    <div
                      class="SubTitle"
                    >
                      Menu-bar Settings
                       
                    </div>
                    <label
                      class="Switch"
                      data-testid="switch"
                    >
                      Show tray icon in the menu bar
                      <input
                        checked=""
                        role="switch"
                        type="checkbox"
                      />
                    </label>
                  </section>
                </div>
                <div
                  class="HorizontalLine size-xl"
                />
                <div
                  data-preference-item-test="sidebar-menu"
                >
                  <section
                    id="other"
                  >
                    <div
                      class="SubTitle"
                    >
                      Sidebar menu order
                       
                    </div>
                    <div
                      class="row"
                    >
                      <span>
                        Reset sidebar menu order to the original settings
                      </span>
                      <button
                        class="Button primary"
                        type="button"
                      >
                        Reset
                      </button>
                    </div>
                  </section>
                </div>
                <div
                  class="HorizontalLine size-xl"
                />
                <div
                  data-preference-item-test="timezone"
                >
                  <section
                    id="locale"
                  >
                    <div
                      class="SubTitle"
                    >
                      Locale Timezone
                       
                    </div>
                    <div
                      class="Select theme-lens css-b62m3t-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-timezone-input-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                        role="log"
                      />
                      <div
                        class="Select__control css-13cymwt-control"
                      >
                        <div
                          class="Select__value-container Select__value-container--has-value css-hlgwow"
                        >
                          <div
                            class="Select__single-value css-1dimb5e-singleValue"
                          >
                            Etc/GMT
                          </div>
                          <div
                            class="Select__input-container css-19bb58m"
                            data-value=""
                          >
                            <input
                              aria-activedescendant=""
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="Select__input"
                              id="timezone-input"
                              role="combobox"
                              spellcheck="false"
                              style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="Select__indicators css-1wy0on6"
                        >
                          <span
                            class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-2"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-2"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-2"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-2"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
              <span
                class="label"
              >
                Search clusters
              </span>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`welcome - navigation using application menu > when navigated somewhere else > when navigated to welcome using application menu > renders 1`] = `
<div>
  <div
    class="Notifications"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="home-button"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <div
      class="topTabBar"
      role="tablist"
    >
      <div
        class="Tabs tabs scrollable"
      >
        <div
          class="Tab flex gap-2 items-center topTab"
          data-testid="top-tab-for-/"
          id="top-tab-/"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Overview
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-/"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-/"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tab flex gap-2 items-center topTab active"
          data-testid="top-tab-for-/welcome"
          id="top-tab-/welcome"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Welcome
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-/welcome"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-/welcome"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Tab flex gap-2 items-center topTab"
          data-testid="top-tab-for-/preferences"
          id="top-tab-/preferences"
          role="tab"
          tabindex="0"
        >
          <div
            class="label"
          >
            <div
              class="flex items-center"
            >
              <span
                class="title"
              >
                Preferences
              </span>
              <div
                class="close"
              >
                <i
                  class="Icon material interactive focusable small"
                  data-testid="top-tab-close-for-/preferences"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="close"
                  >
                    close
                  </span>
                </i>
                <div
                  data-testid="tooltip-content-for-top-tab-close-for-/preferences"
                >
                  Close tab
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div
        class="flex justify-center Welcome items-center"
        data-testid="welcome-page"
      >
        <div
          data-testid="welcome-banner-container"
          style="width: 320px;"
        >
          <i
            class="logo svg focusable"
            data-testid="no-welcome-banners-icon"
          >
            <span
              class="icon"
            >
              <svg
                viewBox="0 0 400 400"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <path
                  d="M 364 200 A 164 164 0 1 0 36 200 A 164 164 0 1 0 364 200 Z M 324 200 A 124 124 0 1 0 76 200 A 124 124 0 1 0 324 200 Z"
                  fill="#00a7a0"
                  fill-rule="evenodd"
                />
                
  
                <path
                  d="M 100,232 L 150,232 L 150,208 L 100,208 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 161.302,224.036 L 186.302,154.036 L 163.698,145.964 L 138.698,215.964 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 163.722,154.101 L 203.722,264.101 L 226.278,255.899 L 186.278,145.899 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 226.030,264.727 L 256.030,194.727 L 233.970,185.273 L 203.970,255.273 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 235.780,197.684 L 260.780,227.684 L 279.220,212.316 L 254.220,182.316 Z"
                  fill="#00a7a0"
                />
                
  
                <path
                  d="M 270,232 L 300,232 L 300,208 L 270,208 Z"
                  fill="#00a7a0"
                />
                
  
                <circle
                  cx="100"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="150"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="175"
                  cy="150"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="215"
                  cy="260"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="245"
                  cy="190"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="270"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                
  
                <circle
                  cx="300"
                  cy="220"
                  fill="#00a7a0"
                  r="12"
                />
                

              </svg>
              

            </span>
          </i>
          <div
            class="flex justify-center"
          >
            <div
              data-testid="welcome-text-container"
              style="width: 320px;"
            >
              <h2>
                Welcome to some-product-name!
              </h2>
              <p>
                To get you started we have auto-detected your clusters in your kubeconfig file and added them to the catalog, your centralized view for managing all your cloud-native resources.
                <br />
                <br />
                If you have any questions or feedback, please join us on our 
                <a
                  class="link"
                  href="https://github.com/freelensapp/freelens/discussions"
                  rel="noreferrer"
                  target="_blank"
                >
                  Github repository
                </a>
                .
              </p>
              <ul
                class="block"
                data-testid="welcome-menu-container"
                style="width: 320px;"
              >
                <li
                  class="flex grid-12"
                >
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="view_list"
                    >
                      view_list
                    </span>
                  </i>
                  <a
                    class="col-10"
                  >
                    Browse Clusters in Catalog
                  </a>
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="navigate_next"
                    >
                      navigate_next
                    </span>
                  </i>
                </li>
                <li
                  class="flex grid-12"
                >
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="terminal"
                    >
                      terminal
                    </span>
                  </i>
                  <a
                    class="col-10"
                  >
                    Open a Terminal
                  </a>
                  <i
                    class="Icon col-1 material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="navigate_next"
                    >
                      navigate_next
                    </span>
                  </i>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="HotbarMenu flex flex-col"
    >
      <div
        class="HotbarItems flex flex-col"
      >
        <div
          class="HotbarCell animateDown"
          index="0"
        >
          <div
            aria-describedby="DndDescribedBy-4"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="1"
        >
          <div
            aria-describedby="DndDescribedBy-4"
            aria-disabled="false"
            aria-roledescription="draggable"
            role="button"
            style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
            tabindex="0"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell animateDown"
          index="2"
        />
        <div
          class="HotbarCell animateDown"
          index="3"
        />
        <div
          class="HotbarCell animateDown"
          index="4"
        />
        <div
          class="HotbarCell animateDown"
          index="5"
        />
        <div
          class="HotbarCell animateDown"
          index="6"
        />
        <div
          class="HotbarCell animateDown"
          index="7"
        />
        <div
          class="HotbarCell animateDown"
          index="8"
        />
        <div
          class="HotbarCell animateDown"
          index="9"
        />
        <div
          class="HotbarCell animateDown"
          index="10"
        />
        <div
          class="HotbarCell animateDown"
          index="11"
        />
        <div
          id="DndDescribedBy-4"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-4"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-Default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      >
        <div
          class="item"
        >
          <div
            class="ClusterSearch"
            data-testid="status-bar-cluster-search"
            id="status-bar-cluster-search"
          >
            <i
              class="Icon material focusable small"
            >
              <span
                class="icon"
                data-icon-name="search"
              >
                search
              </span>
            </i>
            <span
              class="label"
            >
              Search clusters
            </span>
          </div>
        </div>
      </div>
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;
